tests/baselines/reference/constDeclarations-scopes2.errors.txt
tests/cases/compiler/constDeclarations-scopes2.ts(9,19): error TS2365: Operator '<' cannot be applied to types '0' and '10'.


==== tests/cases/compiler/constDeclarations-scopes2.ts (1 errors) ====
    
    // global
    const c = "string";
    
    var n: number;
    var b: boolean;
    
    // for scope
    for (const c = 0; c < 10; n = c ) {
                      ~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types '0' and '10'.
        // for block
        const c = false;
        b = c;
    }
    
    